Новая страница 'Контакты'. Добавлен файл css для поддержки кнопок соц сетей. Подправлен index.html

--- a/html/index.html
+++ b/html/index.html
@@ -257,6 +257,11 @@
                 </div>
             </div>
         </div>
+        <div class="container text-center">
+            <div class="call-to-action">
+                <a href="contacts.html" class="btn btn-primary btn-xl">Больше контактов</a>
+            </div>
+        </div>
     </section>
 
     <!-- jQuery -->
