Поменял в шапке название организации, функционал теперь - ссылка на главную. В меню теперь ссылка 'Вверх'. Попытка работы меню с контактов на главную.

--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Меню навигации</span> Меню <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Компьютерный сервис</a>
+                <a class="navbar-brand page-scroll" href="/">PCmaster.top</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,6 +87,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Связаться</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#page-top">Вверх</a>
                     </li>
                 </ul>
             </div>
