--- a/html/contacts.html
+++ b/html/contacts.html
@@ -74,20 +74,23 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Меню навигации</span> Меню <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Компьютерный сервис</a>
+                <a class="navbar-brand page-scroll" href="/">PCmaster.top</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Я Вам помогу!</a>
+                        <a class="page-scroll" href="/#about">Я Вам помогу!</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Услуги</a>
+                        <a class="page-scroll" href="/#portfolio">Услуги</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Связаться</a>
+                        <a class="page-scroll" href="/#contact">Связаться</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#page-top">Вверх</a>
                     </li>
                 </ul>
             </div>
